<resources>
    <string name="app_name">Assignment2_CashRegisterApp</string>
    <string name="product_type">Product Type</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="c">C</string>
    <string name="buy">Buy</string>
    <string name="select_product">Select Product:</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_quantity">Quantity</string>
    <string name="manager">Manager</string>
    <string name="total_bill">Total Bill</string>
    <string name="purchase_date_and_time">Purchase Date and Time</string>
    <string name="landscape_product_type">Product Type</string>
    <string name="enter_new_quantity">Enter New Quantity</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="select_product_to_re_stock">Select Product to Re-Stock</string>
</resources>