<?xml version="1.0" encoding="utf-8"?>
<!--Code Written By: Seema Shabadi 23/11/2022 -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailedPurchaseHistory"
   android:layout_gravity="center"

  >
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/purchased_prod_name"

    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
   app:layout_constraintBottom_toTopOf="@id/purchased_prod_quantity"
    app:layout_constraintVertical_chainStyle="packed"
    android:textSize="22sp"
    android:hint="@string/product_name"
    android:layout_marginBottom="20dp"

    />

    <TextView
        android:id="@+id/purchased_prod_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/product_quantity"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/purchased_TotalBill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        android:textSize="22sp"
        android:hint="@string/total_bill"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/purchasedOnDateTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/purchased_TotalBill"
        android:textSize="22sp"
        android:hint="@string/purchase_date_and_time"
        android:layout_marginTop="20dp"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        app:layout_constraintGuide_percent="0.5"/>
</androidx.constraintlayout.widget.ConstraintLayout>